--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   publish-gpr:
-    runs-on:
-      group: thulium-ubuntu-runners
+    runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
